refactor(sales): align persistence adapter conventions